# meetcal-web

./: .env.example  .gitignore  Cargo.toml  index.html  justfile  styles.css  vercel.json
public/: posthog-env.js  posthog-init.js
scripts/: vercel-build.sh
src/: auth.rs  lib.rs  main.rs
src/components/: feature.rs  footer.rs  header.rs  mod.rs  subscription_gate.rs
src/pages/: features.rs  home.rs  invite.rs  mod.rs  not_found.rs  privacy.rs  terms.rs
src/pages/comp_data/: data_home.rs  mod.rs  qual_totals.rs  rankings.rs  records.rs  results.rs  standards.rs
src/utils/: api.rs
