[package]
name = "meetcal-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
console_error_panic_hook = "0.1.7"
derive = "1.0.0"
js-sys = "0.3.103"
leptos = { version = "0.8.20", features = ["csr"] }
leptos_router = "0.8.14"
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
